--- a/public/offline.html
+++ b/public/offline.html
@@ -4,40 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="theme-color" content="#6B4C2E" />
-  <title>Offline - Safari Track</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      min-height: 100dvh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: #EDE4D9;
-      font-family: system-ui, -apple-system, sans-serif;
-      color: #3A2E22;
-      padding: 1.5rem;
-      text-align: center;
-    }
-    h1 { font-size: 1.5rem; font-weight: 600; letter-spacing: 0.025em; }
-    p { margin-top: 0.75rem; color: #8B7355; font-size: 0.95rem; line-height: 1.5; }
-    button {
-      margin-top: 2rem;
-      background: #6B4C2E;
-      color: #fff;
-      border: none;
-      border-radius: 0.375rem;
-      padding: 0.625rem 1.5rem;
-      font-size: 0.875rem;
-      font-weight: 500;
-      cursor: pointer;
-    }
-    button:active { opacity: 0.85; }
-  </style>
+  <title>Safari Track</title>
+  <script>
+    window.location.replace("/");
+  </script>
 </head>
-<body>
-  <h1>You're offline</h1>
-  <p>Safari Track needs an internet connection to load this page. Check your connection and try again.</p>
-  <button onclick="window.location.reload()">Retry</button>
-</body>
+<body></body>
 </html>
